nerf_synthetic (blender) dataset

--- a/config/train_permuto_sdf.cfg
+++ b/config/train_permuto_sdf.cfg
@@ -43,48 +43,31 @@ loader_easypbr: {
 }
 
 loader_dtu: {
-
     dataset_path: "./neus_data/data_DTU" //THIS will get changed by the create_dataloader function so it doesn't matter to what it's set 
     mode: "all"
     load_mask: true
-    // restrict_to_scan_idx: 37
-    // restrict_to_scene_name: "dtu_scan24" //house  
-    // restrict_to_scene_name: "dtu_scan37" //scissors 
-    // restrict_to_scene_name: "dtu_scan40" //bricks 
-    // restrict_to_scene_name: "dtu_scan55" //bunny   
-    restrict_to_scene_name: "dtu_scan63" //fruits    
-    // restrict_to_scene_name: "dtu_scan65" //skull    
-    // restrict_to_scene_name: "dtu_scan69" //snowman    
-    // restrict_to_scene_name: "dtu_scan83" //smurf     
-    // restrict_to_scene_name: "dtu_scan97" //cans        
-    // restrict_to_scene_name: "dtu_scan105" //bear     
-    // restrict_to_scene_name: "dtu_scan106" //birds         
-    // restrict_to_scene_name: "dtu_scan110" //goldenbunny   
-    // restrict_to_scene_name: "dtu_scan114" //budha      
-    // restrict_to_scene_name: "dtu_scan118" //angel   
-    // restrict_to_scene_name: "dtu_scan122" //owl     
-
-    // restrict_to_scene_name: "bmvs_bear"    
-    // restrict_to_scene_name: "bmvs_clock"    
-    // restrict_to_scene_name: "bmvs_dog"     
-    // restrict_to_scene_name: "bmvs_durian"   
-    // restrict_to_scene_name: "bmvs_jade"    
-    // restrict_to_scene_name: "bmvs_man"      
-    // restrict_to_scene_name: "bmvs_sculpture"  
-    // restrict_to_scene_name: "bmvs_stone"    
+    restrict_to_scene_name: "dtu_scan63" // fruits 
     autostart: false
     read_with_bg_thread: false
-
-
     subsample_factor: 1
     shuffle: true
-    // do_overfit: true //return only one of the samples the whole time, concretely the first sample in the dataset
     do_overfit: false //return only one of the samples the whole time, concretely the first sample in the dataset
     load_as_shell: false
     preload_to_gpu_tensors: false //preloads all the rgb and maks(if enabled) into cuda tensors. 
     scene_scale_multiplier: 0.4
     rotate_scene_x_axis_degrees: 115
+}
 
+loader_nerf: {
+    dataset_path: "./data/nerf_synthetic" //THIS will get changed by the create_dataloader function so it doesn't matter to what it's set 
+    mode: "all" // train, val, test
+    load_mask: true
+    restrict_to_scene_name: "lego"   
+    autostart: false
+    subsample_factor: 1
+    shuffle: true
+    do_overfit: false // return only one of the samples the whole time, concretely the first sample in the dataset
+    scene_scale_multiplier: 0.25 // a scene_scale of 0.25 keeps the mesh inside the unit sphere
 }
 
 loader_multiface: {
